src/index.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@layer base {
  *:focus {
    @apply !outline-none !ring-0 !ring-offset-0;
  }
  *:focus-visible {
    @apply !outline-none !ring-2 !ring-blue-700 !ring-offset-2;
  }
}

:root {
  scrollbar-gutter: stable;
}

body {
  margin: 0;
  font-family: 'Ubuntu', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: var(--background-color-1, #606c88);
  background: -webkit-linear-gradient(
    to right,
    var(--background-color-1, #606c88),
    var(--background-color-2, #3f4c6b)
  );
  background: linear-gradient(
    to right,
    var(--background-color-1, #606c88),
    var(--background-color-2, #3f4c6b)
  );
  color: var(--text-color, #eee);
}

button {
  cursor: pointer;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

